Генерация карты (не тестировалось)

--- a/Source Code/LD54.csproj
+++ b/Source Code/LD54.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Aardvark.Base.FSharp" Version="5.2.25" />
+  </ItemGroup>
 </Project>
